[tool.poetry]
name = "nginxrtmpbuilder"
version = "0.1.0"
description = ""
authors = ["Dmitry <davydkin.dmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
